added https and a few other changes

--- a/app/portfolio/templates/portfolio/portfolio_projects.html
+++ b/app/portfolio/templates/portfolio/portfolio_projects.html
@@ -1,8 +1,10 @@
 {% extends "portfolio/portfolio_base.html" %}
 {% load markdownify %}
 {% block content %}
+<br>
 <h1 class="page-heading">Highlighted Projects</h1>
-<h3 class="page-heading">More examples can be found on my <a href="https://github.com/JREricson">github page</a>. </h3>
+<h3 class="page-heading">More code samples can be found on my <a href="https://github.com/JREricson">github page</a>.
+</h3>
 
 
 
