--- a/app/portfolio/templates/portfolio/portfolio_about.html
+++ b/app/portfolio/templates/portfolio/portfolio_about.html
@@ -103,7 +103,7 @@
 
         <div class="resume-item">
           <h4>Georgia Tech, MS program</h4>
-          <h5>Sept 2019 - June 2021</h5>
+          <h5>Aug 2023 - Present</h5>
 
 
           <ul>
