--- a/app/portfolio/templates/portfolio/portfolio_project.html
+++ b/app/portfolio/templates/portfolio/portfolio_project.html
@@ -12,7 +12,7 @@
 
 
     {% if object.github%}
-    <p><Strong><i class="lab la-github"></i>Github Repo: </Strong> <a href="{{object.website}}">{{object.github}}</a>
+    <p><Strong><i class="lab la-github"></i>Github Repo: </Strong> <a href="{{object.github}}">{{object.github}}</a>
     </p>
     {% endif %}
 
