--- a/app/portfolio/templates/portfolio/portfolio_project.html
+++ b/app/portfolio/templates/portfolio/portfolio_project.html
@@ -1,7 +1,8 @@
 {% extends "portfolio/portfolio_base.html" %}
 {% load markdownify %}
 {% block content %}
-<div class="container-fluid project-desc-container">
+<br>
+<div class="container-fluid project-desc-container project-content">
 
 
     <h1 class="page-heading">{{object.title}}</h1>
